changed due date

--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h2>OBSERVATIONAL ASTROPHYSICS – FALL 2019 OBSERVING EXERCISE I- Part 1</h2>\n",
-    "<h4>All elements are due by October 31st at 9am.</h4>\n",
+    "<h4>All elements are due by October 30th at 11:59pm.</h4>\n",
     "<i>This is on a day when we do not have class, but things need to work on a somewhat accelerated timescale for us to be ready for our observing.</i>"
    ]
   },
