changed due date

--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -25,7 +25,9 @@
     "Places in code blocks where you will need to modify the code are marked by \n",
     "\"#********************\"\n",
     "\n",
-    "All your answers should be entered using the python notebook templates provided as part of this assignment. Each student will need to hand in their own notebook by uploading it to GitHub."
+    "All your answers should be entered using the python notebook templates provided as part of this assignment. Each student will need to hand in their own notebook by uploading it to a new repository on GitHub.  Just make a repository and add me as a collaborator.\n",
+    "\n",
+    "<i><u>Please save your work to github often, even if you are not complete.  That is a good strategy for backing up your work and also means that you can access it from other computers.</u></i>"
    ]
   },
   {
