changed intro text

--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h2>OBSERVATIONAL ASTROPHYSICS – FALL 2019 OBSERVING EXERCISE I- Part 1</h2>\n",
     "<h4>All elements are due by October 30th at 11:59pm.</h4>\n",
-    "<i>This is on a day when we do not have class, but things need to work on a somewhat accelerated timescale for us to be ready for our observing.</i>"
+    "<i>I know that this is soon, but things need to work on a somewhat accelerated timescale for us to be ready for our observing.</i>"
    ]
   },
   {
