--- a/ObservingProject_Part2_student.ipynb
+++ b/ObservingProject_Part2_student.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "<h2>OBSERVATIONAL ASTROPHYSICS – FALL 2019 OBSERVING EXERCISE- Part 2</h2>\n",
     "<h4></h4>\n",
-    "<i>Note: Enter in all code to the problems in the provided notebook cells. Questions to answer will be <b>bolded</b>.  However, you need to read <b>all the text carefully</b> as you will otherwise miss important elements.</i>  "
+    "<i>Note: Enter in all code to the problems in the provided notebook cells. Questions to answer will be <b>bolded</b>.  However, you need to read <b>all the text carefully</b> as you will otherwise miss important elements.</i> \n",
+    "\n",
+    "This assignment is due on Sunday night at 11:59pm"
    ]
   },
   {
