added hand-in instructions

--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -31,7 +31,12 @@
     "4. You will need to make lists that contain the different kinds of images.  Open the log file on google docs for your night.  \n",
     "\n",
     "\n",
-    "Everywhere with a \\***** you will need to change the code"
+    "Everywhere with a \\***** you will need to change the code\n",
+    "\n",
+    "<h4>What to hand in</h4>\n",
+    "You should make a copy of this notebook to your own directory and add that to your own repository.\n",
+    "\n",
+    "You will hand in this completed notebook that includes all of your overscan check plots."
    ]
   },
   {
