fixed readnoise call and ccdproc manual description

--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -182,14 +182,23 @@
     "\n",
     "In running the overscan subtraction you will need to tell the code what rows and columns to use.  In specifying this, assume: 1) that the array is square; 2) that python arrays start with zero while FITS images start with one; 3) that python arrays index rows as the first element and columns as the second.  So accessing the 9th and 10th column of an image is done by im[:,8:9]\n",
     "\n",
-    "The readme docs that describe this process are given at: https://ccdproc/readthedocs.io/en/latest/reduction_toolbox.html"
+    "The readme docs that describe this process are given at: https://ccdproc.readthedocs.io/en/latest/reduction_toolbox.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-344fd2aaf8c9>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-344fd2aaf8c9>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    g =  #gain in units of electrons/ADU\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.nddata import CCDData\n",
     "import ccdproc\n",
@@ -220,7 +229,7 @@
     "        #p is the pixel count in ADU and sigma_RN is the readnoise\n",
     "        #the u.<blah> is a python way of specifying unit that goes along with the number\n",
     "\n",
-    "        im_with_err = ccdproc.create_deviation(im,gain=g * u.electron/u.adu, readnoise=5.0*u.electron)\n",
+    "        im_with_err = ccdproc.create_deviation(im,gain=g * u.electron/u.adu, readnoise=rn*u.electron)\n",
     "    \n",
     "        #gain correct the images\n",
     "        gain_corr_im = ccdproc.gain_correct(im_with_err,g * u.electron/u.adu)\n",
