fixed mistake with trim_image

--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -187,18 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-344fd2aaf8c9>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-344fd2aaf8c9>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    g =  #gain in units of electrons/ADU\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from astropy.nddata import CCDData\n",
     "import ccdproc\n",
@@ -251,7 +242,7 @@
     "        #now go through every row, take the median, and put it into the check array\n",
     "        #**********\n",
     "        for i in range(len(np.asarray(oscan_sub_im[:]))): \n",
-    "            oscan_check[i] = np.median(dat[i,*****])\n",
+    "            oscan_check[i] = np.median(oscan_check[i,*****])\n",
     "            \n",
     "        #make a plot of the median vs the row number\n",
     "        #**********\n",
@@ -260,7 +251,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim(oscan_sub_im[******])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[******])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
