fixed sigma rejection

--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -94,7 +94,9 @@
     "#Those pixels get a value of 1\n",
     "#*************\n",
     "#given the number of pixels in your image how must you set high_thresh to avoid flagging more than\n",
-    "#one pixel because of expected statistical variations.  Assume the noise is distributed like a Gaussian.\n",
+    "#about 5 pixels because of expected statistical variations.  Assume the noise is distributed like a Gaussian.\n",
+    "#Remember, you want to get rid of really deviant pixels, so if you set the threshold too high you won't\n",
+    "#get rid of anything!\n",
     "bias_comb.sigma_clipping(low_thresh=3, high_thresh=, func=np.ma.median)\n",
     "\n",
     "#Use these masks to combine the images.  This now becomes your master bias\n",
