--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -141,7 +141,7 @@
     "            im = CCDData.read(impath)\n",
     "            \n",
     "            #***********  \n",
-    "            #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/image_combination.html\n",
+    "            #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/reduction_toolbox.html#\n",
     "            #subtract bias frame\n",
     "            im_bsub = \n",
     "            #now write out the file, replacing \".fits\" with \"b.fits\"\n",
