--- a/reduction_part4_student.ipynb
+++ b/reduction_part4_student.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need the observed positions of the stars in this image, but in order to detect those stars we first have to model and subtract the sky background from the data."
+    "First, we need the observed positions of the stars in this image, but in order to detect those stars we first have to model and subtract the sky background from the data.  This is because we want to detect stars at a certain level above the "
    ]
   },
   {
@@ -445,7 +445,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2468</i>\n",
-       "<table id=\"table140425437128272\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140605295162384\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>id</th><th>xcentroid</th><th>ycentroid</th><th>sharpness</th><th>roundness1</th><th>roundness2</th><th>npix</th><th>sky</th><th>peak</th><th>flux</th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>1102</td><td>960.581902932452</td><td>936.7008422896505</td><td>0.38795082297375955</td><td>0.20332742827068326</td><td>0.2452851081187834</td><td>25</td><td>0.0</td><td>1158.370330870301</td><td>2706.7227024415843</td><td>-8.58110941392933</td></tr>\n",
@@ -552,9 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Astrometry.net API key not found in configuration file [astroquery.astrometry_net.core]\n",
+      "WARNING: You need to manually edit the configuration file and add it [astroquery.astrometry_net.core]\n",
+      "WARNING: You may also register it for this session with AstrometryNet.key = 'XXXXXXXX' [astroquery.astrometry_net.core]\n"
+     ]
+    }
+   ],
    "source": [
     "from astroquery.astrometry_net import AstrometryNet\n",
     "AstrometryNet.key = 'kmhcrzkvujoiovbr'\n",
@@ -615,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -624,8 +634,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.02 ms, sys: 822 µs, total: 2.84 ms\n",
-      "Wall time: 2.18 ms\n"
+      "CPU times: user 2.7 ms, sys: 1.81 ms, total: 4.51 ms\n",
+      "Wall time: 5.21 ms\n"
      ]
     },
     {
@@ -744,7 +754,7 @@
        "COMMENT --                                                                      "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
