--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -337,7 +337,7 @@
     "            \n",
     "            #***********  \n",
     "            #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/reduction_toolbox.html\n",
-    "            #subtract bias frame\n",
+    "            #provide flatfield correction\n",
     "            im_flat = \n",
     "            \n",
     "            #now write out the file\n",
